syntax = "proto3";

package api;

option go_package = "user_ms/backend/core/api;api";

message PingRequest{}

message PingResponse{
  string message = 1;
}